fix: removed overflow from aboutUs

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,7 +16,7 @@ a {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  max-width: 100%;
+  max-width: 100vw;
 }
 
 img {
@@ -586,7 +586,7 @@ section.aboutUs {
   position: relative;
   text-align: center;
   margin-top: -8px;
-  overflow-x: hidden; /* esconder before caminhonetes width */
+  overflow: hidden; /* esconder before caminhonetes width */
 }
 section.aboutUs .topWaveAboutUs {
   width: 100%;
